<resources>
    <string name="app_name">Dicoding_Event_App</string>
    <string name="fotoevent">Foto Event</string>
    <string name="namaevent">Nama Event</string>
    <string name="pemilikevent">Pemilik Event</string>
    <string name="waktupelaksanaan">Waktu Pelaksanaan</string>
    <string name="kuotapendaftar">Kuota Pendaftar</string>
    <string name="home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Dicoding Event</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finish Events</string>
    <string name="event_link">Register</string>
    <string name="favorite">Favorite\n</string>
</resources>