<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ui.fragment.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivDetailEventImageLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/title"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/favorite"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_favorite_border" />

        <TextView
            android:id="@+id/tvDetailEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="Judul"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tvDetailEventOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="detailevent"
            android:drawablePadding="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvDetailEventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="detailwaktu"
            android:drawablePadding="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDetailEventQuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="kuota tersedia"
            android:drawablePadding="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDetailEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="8dp"
            tools:text="deskripsi"
            android:paddingBottom="14dp" />

        <Button
            android:id="@+id/btnDetailEventOpenLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_link"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</ScrollView>